--- a/client/src/components/ALLPOST.css
+++ b/client/src/components/ALLPOST.css
@@ -1,12 +1,14 @@
 
 
-
+.allpostgrid{
+    display: grid;
+    align-items: center;
+    grid-template-columns: .5fr 1.5fr .5fr;
+}
 .allallposts{
-    position: absolute;
-    width: 65%;
-    top:2rem;
-    left:50%;
-    transform: translate(-50%,0%);
+    margin-top:2rem;
+    min-width:65rem;
+    padding: 0 8rem;
     
     
 }
